tests/nginx-to-traefik/fixtures/cross-consistency-stale-dns/input/common.service/overlays/dev/argocd-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik
  tls:
  - hosts: ["argocd.dev.awoo.org"]
    secretName: argocd-server-tls
  rules:
  - host: argocd.dev.awoo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
